<resources>
    <string name="app_name">Donatracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">email address is invalid</string>
    <string name="error_invalid_password">password is too short</string>
    <string name="error_incorrect_password">password is incorrect</string>
    <string name="error_field_required">field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_select_login">Login</string>
    <string name="action_select_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="create_username">create username</string>
    <string name="error_username_unavailable">username is unavailable</string>
    <string name="reenter_password">re-enter password</string>
    <string name="error_password_mismatch">password does not match</string>
    <string name="welcome">Welcome to Donatracker</string>
    <string name="error_incorrect_login">username or password is incorrect</string>
    <string name="lockout">No login attempts left. Wait up to %d minutes.</string>
    <string name="title_activity_add_donation">addDonation</string>
    <string name="title_activity_view_donations">ViewDonationsActivity</string>
    <string name="back">Back</string>
    <string name="no_matching_donations">No donations match these conditions.</string>
    <string name="number_list">%d: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addDonation">Add a Donation</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_select_guest_login">Login as Guest</string>
</resources>
